--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body,html {
   font-family: "Fira Sans","Trebuchet MS",Ubuntu,Helvetica,Arial sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /*background: url("https://cdn.hovia.com/app/uploads/peach-and-green-speckle-plain-820x532.jpg");*/
+  background: url("https://thumbs.dreamstime.com/b/thin-white-grey-diagonal-stripes-background-pixel-seamless-web-vector-illustration-212391198.jpg");
 }
 
 #root {
